# rustcraft

./: CHANGELOG.txt  Cargo.toml  Dockerfile  Justfile  LICENSE.txt  README.md  run1.sh  run2.sh
client/: Cargo.toml
client/src/: constants.rs  game.rs  main.rs
client/src/camera/: controller.rs  spawn.rs
client/src/entities/: stack.rs
client/src/input/: data.rs  keyboard.rs  mouse.rs
client/src/menu/: controls.rs  mod.rs  multi.rs  solo.rs
client/src/mob/: fox.rs  mod.rs  spawn.rs
client/src/network/: api.rs  buffered_client.rs  chat.rs  cleanup.rs  extensions.rs  inputs.rs  mod.rs  player.rs  setup.rs  world.rs
client/src/player/: controller.rs  interactions.rs  labels.rs  mod.rs  spawn.rs  update.rs
client/src/ui/: assets.rs  button.rs  chat.rs  mod.rs  pause.rs  style.rs
client/src/ui/hud/: chat.rs  hotbar.rs  mod.rs  reticle.rs
client/src/ui/hud/debug/: blocks.rs  chunks.rs  coords.rs  fps.rs  inspector.rs  loaded_stats.rs  mod.rs  raycast.rs  setup.rs  targeted_block.rs
client/src/ui/menus/: controls.rs  home.rs  loading.rs  mod.rs  multi.rs  pause.rs  server_connect_loading.rs  settings.rs  solo.rs  splash.rs
client/src/world/: celestial.rs  data.rs  mod.rs  raycast.rs  time.rs
client/src/world/rendering/: materials.rs  meshing.rs  mod.rs  render.rs  voxel.rs
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs
shared/src/messages/: auth.rs  mob.rs  mod.rs  player.rs  world.rs
shared/src/players/: collision.rs  constants.rs  data.rs  mod.rs  movement.rs
shared/src/world/: blocks.rs  data.rs  items.rs  mobs.rs  mod.rs  utils.rs
(+34 files in other folders)
