[package]
name = "client"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version="0.15", features=["serialize"] }
lazy_static = "1.5.0"
rand = "0.8.5"              # to generate the seed
noise = "0.9"               # to generate the map
bevy_simple_text_input = "0.10"
bevy_renet = "1.0.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
bevy_atmosphere = "0.12"
shared = { path = "../shared" }
server = { path = "../server" }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
clap = { version = "4.5.19", features = ["derive"] }

[lints]
workspace = true