[package]
name = "shared"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy_ecs = { version = "0.15", default-features=false}
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.210", features = ["derive"] }
bevy = { version = "0.15", default-features = false }
rand = "0.8"
bevy_renet = "1.0.0"

[lints]
workspace = true